syntax = "proto3";

package character.validation;

message ValidateUserRequest {
  int64 user_id = 1;
  int64 character_id = 2;
}

message CharacterValidationResponse {
  oneof result {
    SuccessValidationResult success = 1;
    UserNotFoundValidationResult user_not_found = 2;
    CharacterNotFoundValidationResult character_not_found = 3;
  }
}

message SuccessValidationResult {}

message UserNotFoundValidationResult {}

message CharacterNotFoundValidationResult {}

message CreateUserRequest {
  string name = 1;
  string phone_number = 2;
}

message RegisterUserResponse {
  int64 user_id = 1;
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  UserModel user = 1;
}

message UserModel {
  int64 id = 1;
  string name = 2;
  string phone_number = 3;
}

service UserGrpcService {
  rpc ValidateUser (ValidateUserRequest) returns (CharacterValidationResponse);
  rpc RegisterUser (CreateUserRequest) returns (RegisterUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}
